tests/error/if.lua

foo = true

if foo then
    print '1'
else then
    print '2'
elseif then
    print '3'
end
